--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
