--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
     "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
     "lucide-react": "^0.344.0",
