--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@types/react-redux": "^7.1.34",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -22,12 +23,14 @@
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/google.maps": "^3.58.1",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
