--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "firebase": "^11.9.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.344.0",
     "node-fetch": "^3.3.2",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.5.3",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.0",
+    "react-to-print": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
