--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@googlemaps/js-api-loader": "^1.16.8",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-redux": "^7.1.34",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
